<resources>
    <string name="app_name">Ballot Bull</string>
    <string name="main_subtitle">Online voting made easy</string>
    <string name="main_join_voting_btn">Join voting</string>
    <string name="main_create_voting_btn">Create voting</string>
    <string name="main_list_votings_btn">Finished votings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="some_content">Some content</string>
    <string name="thank_you_for_voting">You have confirmed your selection and your vote has been recorded. \n\n Thank you.</string>
    <string name="back">Back</string>
    <string name="vote">Vote</string>
    <string name="program">Program</string>
    <string name="voting_description">Voting description</string>
    <string name="number_of_answers">Number of winning answers</string>
    <string name="number_of_people_entitled_to_vote">Number of people entitled to vote</string>
    <string name="quorum">Quorum</string>
    <string name="is_voting_open">Is voting open</string>
    <string name="voting_is_open">Open</string>
    <string name="voting_is_closed">Closed</string>
    <string name="voting_end_date">Voting end date</string>
    <string name="finish_voting_btn">Finish Voting</string>
    <string name="show_results_btn">Show results</string>
    <string name="voting_name_placeholder">Voting name</string>
    <string name="voting_code">Voting code</string>
    <string name="voting_code_label">Code:</string>
    <string name="no_data_available">No data found</string>
    <string name="quorum_not_reached_msg">Nobody wins! Quorum has not been reached.</string>
    <string name="confirm">Confirm</string>
</resources>
